--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Di Gino - Développeur Front-end et Designer UI</title>
-  <meta name="description" content="Salut moi c'est Gino. Je suis un Développeur web Front-end et Designer UI résidant à Lomé">
+  <title>Di Gino - Développeur Web et Designer UI</title>
+  <meta name="description" content="Salut moi c'est Gino. Je suis un Développeur Web et Designer UI résidant à Lomé">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="Di Gino - Développeur web Front-end et Designer UI à Lomé">
+  <meta property="og:title" content="Di Gino - Développeur Web et Designer UI à Lomé">
   <meta property="og:type" content="website">
   <meta property="og:url" content="digino.github.io">
   <meta property="og:image" content="icon.png">
