--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="who">
     <h1>Salut, moi c'est Gino SOTONGBE</h1>
     <p>Je suis un Développeur Web<br>
-        et Designer UI junior résidant à Lomé</p>
+        et Designer UI résidant à Lomé</p>
   </div>
   <div class="image_div">
       <span class="dec1"></span>
@@ -80,13 +80,20 @@ Je suis actuellement en quête de nouveaux défis et de nouvelles expériences.<
         <p class="en-gras">- UI Design (Adobe XD)</p>
       </div>
     </div>
-    <p class="ps">*En train d'apprendre actuellement le <strong>Javascript avancé</strong>, les éléments de l'écosystème du framework <strong>VueJS</strong> et les principes <strong>avancés du Design.</strong></p>
   </section>
 
   <section id="portfolio" class="section">
     <h2><span class="decoration">#</span>Mon Portfolio</h2>
     <p>Voici quelques uns des projets que j'ai réalisé</p>
     <div class="row">
+      <div class="projet">
+          <img class="apercu" src="img/helium-shot.png">
+          <p><strong>Helium Artworks</strong> est une banque d'images dont le but est de fournir du contenu média typiquement africain.</p>
+          <span class="tool-tip">i
+            <span class="tool-tip-text">Frontend réalisé en VueJS et rendu côté serveur avec NuxtJs.</span>
+          </span>
+          <a href="https://heliumartworks.com" class="link-button" title="Visiter Helium Artworks" target="_blank">Visiter Helium Artworks</a>
+      </div>
       <div class="projet">
           <img class="apercu" src="img/ozofr-shot.png">
           <p><strong>ozofr.com</strong> est une plateforme web permettant aux entrepreneurs de trouver rapidement les appels d'offres en Afrique de l'Ouest.</p>
