--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     <section id="en-bref" class="section">
   <h2><span class="decoration">#</span>En bref</h2>
   <p class="presentation">
-Après 3 années d'études supérieures en informatique et deux diplômes décrochés en 2017, je me suis essentiellement consacré à la <span class="en-gras">programmation</span> et au <span class="en-gras">design</span>. Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus mes compétences et mon expérience en technologie.</p>
+Après 3 années d'études supérieures en informatique et deux diplômes décrochés en 2017, je me suis essentiellement consacré à la <span class="en-gras">programmation</span> et au <span class="en-gras">design</span>. 
+Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus mes compétences.</p>
   </section>
 
   <section id="competences" class="section">
