--- a/index.html
+++ b/index.html
@@ -95,20 +95,20 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
     <p>Quelques uns des projets que j'ai réalisé</p>
     <div class="row">
       <div class="projet">
+          <img class="apercu" src="img/ozofr-shot.png">
+          <p><strong>ozofr.com</strong> est une plateforme web qui indexe les appels d'offres, marchés publics ou privés et appels à manifestation d'intérêts en Afrique.</p>
+          <span class="tool-tip">i
+            <span class="tool-tip-text">Frontend réalisé avec du HTML, du CSS, du Javascript(VueJS) et backend conçu avec du PHP couplé au CMS WordPress pour l'administration.</span>
+          </span>
+          <a href="https://ozofr.com" class="link-button" title="Visiter ozofr" target="_blank">Visiter ozofr</a>
+      </div>
+	   <div class="projet">
           <img class="apercu" src="img/helium-shot.png">
           <p><strong>Helium Artworks</strong> est une banque d'images dont l'objectif est de fournir du contenu média typiquement africain.</p>
           <span class="tool-tip">i
             <span class="tool-tip-text">Frontend réalisé en VueJS et rendu côté serveur avec NuxtJs.</span>
           </span>
           <a href="https://heliumartworks.com" class="link-button" title="Visiter Helium Artworks" target="_blank">Visiter Helium Artworks</a>
-      </div>
-      <div class="projet">
-          <img class="apercu" src="img/ozofr-shot.png">
-          <p><strong>ozofr.com</strong> est une plateforme web permettant aux entrepreneurs de trouver rapidement les appels d'offres en Afrique de l'Ouest.</p>
-          <span class="tool-tip">i
-            <span class="tool-tip-text">Frontend réalisé avec du HTML, du CSS, du Javascript(VueJS) et backend conçu avec du PHP couplé au CMS WordPress pour l'administration.</span>
-          </span>
-          <a href="https://ozofr.com" class="link-button" title="Visiter ozofr" target="_blank">Visiter ozofr</a>
       </div>
       <div class="projet">
           <img class="apercu" src="img/erudyx-shot.jpg">
