--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <section class="section flex">
   <div class="who">
-    <h1>Salut, moi c'est Gino SOTONGBE</h1>
+    <h1>Salut, moi c'est Gino</h1>
     <p>Je suis un <span class="en-gras">Développeur Web</span> et <span class="en-gras">Designer UI</span> résidant à Lomé.</p>
   </div>
   <div class="image_div">
