--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Di Gino - Développeur Web et Designer UI</title>
-  <meta name="description" content="Salut moi c'est Gino. Je suis un Développeur Web et Designer UI résidant à Lomé">
+  <title>Di Gino - Développeur Web et Designer UI/UX</title>
+  <meta name="description" content="Salut moi c'est Gino. Je suis un Développeur Web et Designer UI/UX résidant à Lomé">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="Di Gino - Développeur Web et Designer UI à Lomé">
@@ -15,9 +15,7 @@
   <meta property="og:image" content="icon.png">
 
   <link rel="icon" href="icon.png">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css"> 
 
   <meta name="theme-color" content="#A4EAEA">
 </head>
@@ -72,7 +70,7 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
 		Langages: <span class="en-gras">HTML5, CSS3, Javascript(ES6), PHP</span>
 		</p>
 		<p>
-		Frameworks: <span class="en-gras">VueJS, SpectreCSS, Bootstrap</span>
+		Frameworks: <span class="en-gras">VueJS, SpectreCSS, Bootstrap CSS</span>
 		</p>
 		<p>
 		CMS: <span class="en-gras">WordPress</span>
@@ -81,11 +79,11 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
       <div class="line">
         <h3>- Design UI</h3>
 		<p>Je crée des maquettes et prototypes de sites web et d'applications mobiles</p>
-		<p>Outils: <span class="en-gras">Adobe XD, Figma</span>
+		<p>Outils: <span class="en-gras">Adobe XD, Figma</span></p>
       </div>
 	   <div class="line">
         <h3>- Bonnes pratiques Dev</h3>
-		<p>Déployement continu : <span class="en-gras">Git, Github actions</span>
+		<p class="en-gras">Webpack, Gulp, Git, Github actions</p>
       </div>
     </div>
   </section>
