Change meta theme

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <link rel="icon" href="icon.png">
   <link rel="stylesheet" href="css/main.css"> 
 
-  <meta name="theme-color" content="#A4EAEA">
+  <meta name="theme-color" content="#f78ca0">
 </head>
 
 <body>
 
 <header class="section">
 <div class="container flex">
-  <a href="index.html" class="logo">
+  <a href="digino.github.io" class="logo">
     <img src="img/logo.png">
   </a>
 <nav class="navbar">
@@ -106,11 +106,11 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
       </div>
       <div class="projet">
           <img class="apercu" src="img/cej-shot.jpg">
-          <p>Le site officiel du Centre Evangélique de Jonquière (Québec)</p>
+          <p>Le site web du Centre Evangélique de Jonquière (Québec)</p>
           <span class="tool-tip">i
             <span class="tool-tip-text">Design réalisé avec Adobe XD et intégration faite avec WordPress</span>
           </span>
-          <a href="https://cej-pentecote.com/" class="link-button" title="Visiter erudyx" target="_blank">Voir le site</a>
+          <a href="https://cej-pentecote.com/" class="link-button" title="Visiter CEJ" target="_blank">Voir le site</a>
       </div>      
 	  <div class="projet">
           <img class="apercu" src="img/jep-shot.jpg">
@@ -127,11 +127,11 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
             <span class="tool-tip-text">Design et intégration faite avec du
               HTML, du CSS, du Javascript(JQuery) et du PHP (fonctions Wordpress.). Utilisation de l'api de Wikipedia pour afficher les évènements éphémérides du jour</span>
           </span>
-          <a href="https://erudyx.com" class="link-button" title="Visiter erudyx" target="_blank">Voir le site</a>
+          <a href="https://erudyx.com" class="link-button" title="Voir la maquette" target="_blank">Voir le site</a>
       </div>
       <div class="projet">
           <img class="apercu" src="img/heaven-shot.jpg">
-          <p><strong>vivreheaven.org</strong> est le site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1</p>
+          <p>Le site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1</p>
           <span class="tool-tip">i
             <span class="tool-tip-text">Design réalisé avec Adobe XD et intégration faite avec du HTML, du CSS et du Javascript</span>
           </span>
