--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
 <html class="bg" lang="fr-FR">
-
-  <!-- [...] Demain c'est loin, notre futur c'est la seconde d'après [...] - Youssoupha -->
-
 <head>
   <meta charset="utf-8">
   <title>Di Gino - Développeur Web et Designer UI/UX</title>
@@ -88,6 +85,14 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
     <h2><span class="decoration">#</span>Mon Portfolio</h2>
     <p>Quelques uns des projets que j'ai réalisé</p>
     <div class="row">
+	   <div class="projet">
+          <img class="apercu" src="img/eg-shot.jpg">
+          <p>Le site web du consultant en communication institutionelle et numérique <strong>Edem Gbetoglo</strong>.</p>
+          <span class="tool-tip">i
+            <span class="tool-tip-text">Design réalisé avec Figma et intégration faite avec WordPress.</span>
+          </span>
+          <a href="https://edemgbetoglo.com" class="link-button" title="Visiter ozofr" target="_blank">Voir le site</a>
+      </div>
       <div class="projet">
           <img class="apercu" src="img/ozofr-shot.png">
           <p><strong>ozofr.com</strong> est une plateforme web qui indexe les appels d'offres, marchés publics ou privés et appels à manifestation d'intérêts en Afrique.</p>
@@ -118,7 +123,7 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
           <span class="tool-tip">i
             <span class="tool-tip-text">Maquette réalisée avec Figma et en attente de validation</span>
           </span>
-          <a href="https://www.figma.com/proto/MseXH7auMsM8PAZ0XiZv9E/JEPERRON?page-id=0%3A1&node-id=22%3A221&viewport=241%2C48%2C0.16&scaling=min-zoom&starting-point-node-id=22%3A221" class="link-button font-600" title="Visiter erudyx" target="_blank">Voir la maquette</a>
+          <a href="https://www.figma.com/proto/MseXH7auMsM8PAZ0XiZv9E/JEPERRON?page-id=0%3A1&node-id=22%3A221&viewport=241%2C48%2C0.16&scaling=min-zoom&starting-point-node-id=22%3A221" class="link-button" title="Visiter erudyx" target="_blank">Voir la maquette</a>
       </div>
 	  <div class="projet">
           <img class="apercu" src="img/erudyx-shot.jpg">
