--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
     <div class="row">
 	   <div class="projet">
           <img class="apercu" src="img/eg-shot.jpg">
-          <p>Le site web du consultant en communication institutionelle et numérique <strong>Edem Gbetoglo</strong>.</p>
+          <p>Le site web du consultant en communication institutionnelle et numérique, et podcasteur <strong>Edem Gbetoglo</strong>.</p>
           <span class="tool-tip">i
             <span class="tool-tip-text">Design réalisé avec Figma et intégration faite avec WordPress.</span>
           </span>
