--- a/index.html
+++ b/index.html
@@ -85,14 +85,6 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
     <h2><span class="decoration">#</span>Mon Portfolio</h2>
     <p>Quelques uns des projets que j'ai réalisé</p>
     <div class="row">
-	   <div class="projet">
-          <img class="apercu" src="img/eg-shot.jpg">
-          <p>Le site web du consultant en communication institutionnelle et numérique, et podcasteur <strong>Edem Gbetoglo</strong>.</p>
-          <span class="tool-tip">i
-            <span class="tool-tip-text">Design réalisé avec Figma et intégration faite avec WordPress.</span>
-          </span>
-          <a href="https://edemgbetoglo.com" class="link-button" title="Visiter ozofr" target="_blank">Voir le site</a>
-      </div>
       <div class="projet">
           <img class="apercu" src="img/ozofr-shot.png">
           <p><strong>ozofr.com</strong> est une plateforme web qui indexe les appels d'offres, marchés publics ou privés et appels à manifestation d'intérêts en Afrique.</p>
@@ -100,6 +92,14 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
             <span class="tool-tip-text">Front-end rendu en VueJS et Backend conçu avec du PHP couplé au CMS WordPress pour l'administration.</span>
           </span>
           <a href="https://ozofr.com" class="link-button" title="Visiter ozofr" target="_blank">Voir le site</a>
+      </div>
+	  <div class="projet">
+          <img class="apercu" src="img/eg-shot.jpg">
+          <p>Le site web du consultant en communication institutionnelle et numérique, et podcasteur <strong>Edem Gbetoglo</strong>.</p>
+          <span class="tool-tip">i
+            <span class="tool-tip-text">Intégration faite avec WordPress(Validation du site en cours).</span>
+          </span>
+          <a href="#" class="link-button" title="Visiter ozofr" target="_blank">Voir le site</a>
       </div>
 	   <div class="projet">
           <img class="apercu" src="img/helium-shot.png">
