--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!doctype html>
 <html class="bg" lang="fr-FR">
 <head>
-  <meta charset="utf-8">
-  <title>Di Gino - Développeur Web et Designer UI/UX</title>
-  <meta name="description" content="Salut moi c'est Gino. Je suis un Développeur Web et Designer UI/UX résidant à Lomé">
+  <meta charset="utf-8">  
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="Di Gino - Développeur Web et Designer UI à Lomé">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="digino.github.io">
-  <meta property="og:image" content="icon.png">
+	<title>Développeur Web et Designer UI/UX à Lomé (Togo) - Di Gino</title>
+	<meta name="title" content="Développeur Web et Designer UI/UX à Lomé (Togo) - Di Gino">
+	<meta name="description" content="Développeur et Designer UI/UX résidant à Lomé, je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
 
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://digino.github.io/">
+	<meta property="og:title" content="Développeur Web et Designer UI/UX à Lomé (Togo) - Di Gino">
+	<meta property="og:description" content="Développeur et Designer UI/UX résidant à Lomé, je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
+	<meta property="og:image" content="https://digino.github.io/img/logo2x.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://digino.github.io/">
+	<meta property="twitter:title" content="Développeur Web et Designer UI/UX à Lomé (Togo) - Di Gino">
+	<meta property="twitter:description" content="Développeur et Designer UI/UX résidant à Lomé, je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
+	<meta property="twitter:image" content="https://digino.github.io/img/logo2x.png">
+
+	
   <link rel="icon" href="icon.png">
   <link rel="stylesheet" href="css/main.css"> 
 
@@ -41,7 +53,7 @@
   <section class="section">
   <div class="who">
     <h1>Salut, moi c'est <span class="clip-text bg-gradient">Gino</span></h1>
-    <p class="m0">Je suis un <span class="font-600 clip-text bg-gradient">Développeur Web</span> et <span class="font-600 clip-text bg-gradient">Designer UI</span></p>
+    <p class="m0">Je suis <span class="font-600 clip-text bg-gradient">Développeur Web</span> et <span class="font-600 clip-text bg-gradient">Designer UI</span></p>
   </div>
 <!--   <div class="image_div">
       <span class="dec1"></span>
@@ -101,14 +113,6 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
           </span>
           <a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Voir le site</a>
       </div>	  
-	  <div class="projet">
-          <img class="apercu" src="img/eg-shot.jpg">
-          <p>Le site web du consultant en communication institutionnelle et numérique, et podcasteur <strong>Edem Gbetoglo</strong>.</p>
-          <span class="tool-tip">i
-            <span class="tool-tip-text">Intégration faite avec WordPress(Validation du site en cours).</span>
-          </span>
-          <a href="#" class="link-button" title="Visiter ozofr" target="_blank">Voir le site</a>
-      </div>
 	   <div class="projet">
           <img class="apercu" src="img/helium-shot.png">
           <p><strong>Helium Artworks</strong> est une banque d'images dont l'objectif est de fournir du contenu média typiquement africain.</p>
@@ -117,14 +121,14 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
           </span>
           <a href="https://heliumartworks.com" class="link-button" title="Visiter Helium Artworks" target="_blank">Voir le site</a>
       </div>
-      <div class="projet">
-          <img class="apercu" src="img/cej-shot.jpg">
-          <p>Le site web du Centre Evangélique de Jonquière (Québec)</p>
+	  <div class="projet">
+          <img class="apercu" src="img/eg-shot.jpg">
+          <p>Le site web du consultant en communication institutionnelle et numérique, et podcasteur <strong>Edem Gbetoglo</strong>.</p>
           <span class="tool-tip">i
-            <span class="tool-tip-text">Design réalisé avec Adobe XD et intégration faite avec WordPress</span>
+            <span class="tool-tip-text">Intégration faite avec WordPress(Validation du site en cours).</span>
           </span>
-          <a href="https://cej-pentecote.com/" class="link-button" title="Visiter CEJ" target="_blank">Voir le site</a>
-      </div>      
+          <a class="link-button" title="Visiter ozofr" target="_blank">Site en cours de validation</a>
+      </div>
 	  <div class="projet">
           <img class="apercu" src="img/jep-shot.jpg">
           <p>Maquette proposée pour la refonte du site web de <strong>JE PERRON Ltée</strong> (https://jeperron.ca/)</p>
@@ -133,6 +137,23 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
           </span>
           <a href="https://www.figma.com/proto/MseXH7auMsM8PAZ0XiZv9E/JEPERRON?page-id=0%3A1&node-id=22%3A221&viewport=241%2C48%2C0.16&scaling=min-zoom&starting-point-node-id=22%3A221" class="link-button" title="Visiter erudyx" target="_blank">Voir la maquette</a>
       </div>
+	  <div class="projet">
+          <img class="apercu" src="img/dstogo-shot.jpg">
+          <p>Le site web de la société <strong>Destination Togo</strong> opérant dans la conciergerie pour touristes au Togo.</p>
+          <span class="tool-tip">i
+            <span class="tool-tip-text">Intégration faite avec WordPress</span>
+          </span>
+          <a href="http://destinationtogo.net" class="link-button" title="Visiter Destination Togo" target="_blank">Voir le site</a>
+      </div>
+  
+      <div class="projet">
+          <img class="apercu" src="img/cej-shot.jpg">
+          <p>Le site web du Centre Evangélique de Jonquière (Québec)</p>
+          <span class="tool-tip">i
+            <span class="tool-tip-text">Design réalisé avec Adobe XD et intégration faite avec WordPress</span>
+          </span>
+          <a href="https://cej-pentecote.com/" class="link-button" title="Visiter CEJ" target="_blank">Voir le site</a>
+      </div>      
 	  <div class="projet">
           <img class="apercu" src="img/erudyx-shot.jpg">
           <p><strong>erudyx.com</strong> est une plateforme web destinée au partage de la culture générale</p>
@@ -179,7 +200,7 @@ Dès lors, j'ai pu travailler sur différents projets qui ont forgé encore plus
     <div class="row">
       <div class="line">
         <h3>Email</h3>
-        <p><a href="mailto:gsotongbe@gmail.com" class="link-button" title="Contacter Gino par Email">gsotongbe@gmail.com</a></p>
+        <p><a href="mailto:gsotongbe@gmail.com" title="Contacter Gino par Email">gsotongbe@gmail.com</a></p>
       </div>
       <div class="line">
         <h3>Github</h3>
