--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
   <meta charset="utf-8">  
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Développeur Web et Designer UI/UX à Lomé (Togo) - Di Gino</title>
-	<meta name="title" content="Développeur Web et Designer UI/UX à Lomé (Togo) - Di Gino">
-	<meta name="description" content="Développeur et Designer UI/UX résidant à Lomé, je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
+	<title>Développeur Web à Lomé (Togo) - Di Gino</title>
+	<meta name="title" content="Développeur Web Front-end à Lomé, Togo - Di Gino">
+	<meta name="description" content="Développeur Web Front-end et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://digino.github.io/">
-	<meta property="og:title" content="Développeur Web et Designer UI/UX à Lomé (Togo) - Di Gino">
-	<meta property="og:description" content="Développeur et Designer UI/UX résidant à Lomé, je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
+	<meta property="og:title" content="Développeur Web Front-end résidant à Lomé, Togo - Di Gino">
+	<meta property="og:description" content="Développeur Web Front-end et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
 	<meta property="og:image" content="https://digino.github.io/img/logo2x.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://digino.github.io/">
-	<meta property="twitter:title" content="Développeur Web et Designer UI/UX à Lomé (Togo) - Di Gino">
-	<meta property="twitter:description" content="Développeur et Designer UI/UX résidant à Lomé, je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
+	<meta property="twitter:title" content="Développeur Web Front-end résidant à Lomé, Togo - Di Gino">
+	<meta property="twitter:description" content="Développeur Web Front-end et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
 	<meta property="twitter:image" content="https://digino.github.io/img/logo2x.png">
 
 	
@@ -27,13 +27,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="dist/main.css?cb=1653414499823">
+  <link rel="stylesheet" href="dist/main.css?cb=1653461245076">
 
   <meta name="theme-color" content="#000">
   <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 
-<body class="dark-bg">
+<body class="bg-gray">
 
 <header class="section">
 <div class="container flex">
@@ -87,7 +87,7 @@
           <p>Git, Github Actions</p>
         </div>
       </div>
-      <h3>Mes compétences non techniques</h3>
+      <h3>Mes compétences softs</h3>
       <div class="row">
         <div class="line">
           <p>Curieux et ouvert à l'apprentissage</p>
@@ -126,7 +126,7 @@
           <p>Le site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1</p>
           <div class="divider"></div>
           <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
-            L'intégration faite avec du HTML, du CSS et du Javascript (associé à certaines librairies d'animation)
+            L'intégration s'est faite avec du HTML, du CSS et du Javascript (associé à certaines librairies d'animation)
           </p>
           <a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Voir le site</a>
         </div>
@@ -149,7 +149,7 @@
         <div class="description">
           <p><strong>Helium Artworks</strong> est une banque d'images dont l'objectif est de fournir du contenu média typiquement africain.</p>
           <div class="divider"></div>
-          <p><span class="font-600">Mes travaux: </span>Intégration du Front-end et appel d'api<br>
+          <p><span class="font-600">Mes travaux: </span>Intégration du Front-end et appel d'api.<br>
             Front-end intégré en VueJS.
           </p>
           <a href="https://heliumartworks.com" class="link-button" title="Visiter Helium Artworks" target="_blank">Voir le site</a>
@@ -161,7 +161,7 @@
         <div class="description">
           <p>Site web destiné au partage de la culture générale</p>
           <div class="divider"></div>
-          <p><span class="font-600">Mes travaux: </span>Design et Intégration<br>
+          <p><span class="font-600">Mes travaux: </span>Design et Intégration.<br>
             Conception d'un thème WordPress unique pour le site. Utilisation de l'api de Wikipedia pour afficher les évènements éphémérides du jour
           </p>
           <a href="https://erudyx.com" class="link-button" title="Voir la maquette" target="_blank">Voir le site</a>
@@ -173,8 +173,8 @@
         <div class="description">
           <p>Maquette proposée pour la refonte du site web de <strong>JE PERRON Ltée</strong> (https://jeperron.ca/)</p>
           <div class="divider"></div>
-          <p><span class="font-600">Mes travaux: </span>Design<br>
-            Maquette réalisée avec Figma et en attente de validation
+          <p><span class="font-600">Mes travaux: </span>Design.<br>
+            Maquette réalisée avec Figma et en attente de validation pour intégration.
           </p>
           <a href="https://www.figma.com/proto/MseXH7auMsM8PAZ0XiZv9E/JEPERRON?page-id=0%3A1&node-id=22%3A221&viewport=241%2C48%2C0.16&scaling=min-zoom&starting-point-node-id=22%3A221" class="link-button" title="Visiter erudyx" target="_blank">Voir la maquette</a>
         </div>
@@ -185,7 +185,7 @@
         <div class="description">
           <p>Le site web de la société <strong>Destination Togo</strong> opérant dans la conciergerie pour touristes au Togo.</p>
           <div class="divider"></div>
-          <p><span class="font-600">Mes travaux: </span>Intégration<br>
+          <p><span class="font-600">Mes travaux: </span>Conception du site.<br>
             Intégration faite avec WordPress et Elementor.
           </p>
           <a href="http://destinationtogo.net" class="link-button" title="Visiter Destination Togo" target="_blank">Voir le site</a>
@@ -197,7 +197,7 @@
         <div class="description">
           <p>Site web vitrine du consultant en communication institutionnelle/numérique, et podcasteur <strong>Edem Gbetoglo</strong>.</p>
           <div class="divider"></div>
-          <p><span class="font-600">Mes travaux: </span>Intégration<br>
+          <p><span class="font-600">Mes travaux: </span>Intégration du site.<br>
             Création d'un thème WordPress unique pour le site.
           </p>
           <a class="link-button" title="Visiter le site" target="_blank">Site en cours de validation</a>
